[package]
name = "chorus"
version = "1.5.2"
description = "A personal relay for nostr"
authors = ["Mike Dilger <mike@mikedilger.com>"]
license = "MIT"
repository = "https://github.com/mikedilger/chorus"
edition = "2021"

[dependencies]
base64 = "0.22"
dashmap = "6"
env_logger = "0.11"
futures = "0.3"
hex = "0.4"
http = "1.1"
http-body-util = "0.1"
hyper = { version = "1.5", features = [ "http1", "server" ] }
hyper-tungstenite = "0.15"
hyper-util = "0.1"
lazy_static = "1.5"
log = "0.4"
pocket-types = { git = "https://github.com/mikedilger/pocket", branch = "master" }
pocket-db = { git = "https://github.com/mikedilger/pocket", branch = "master" }
parking_lot = "0.12"
rustls-pki-types= "1.10"
rustls-pemfile = "2.2"
secp256k1 = { version = "0.29", features = [ "hashes", "global-context", "rand-std" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
speedy = "0.8"
textnonce = "1"
tokio = { version = "1", features = [ "full" ] }
tokio-rustls = "0.26"
toml = "0.8"
url = "2.5"

[dev-dependencies]
tempfile = "3"