[package]
name = "chorus"
version = "2.0.0"
description = "A personal relay for nostr"
authors = ["Mike Dilger <mike@mikedilger.com>"]
license = "MIT"
repository = "https://github.com/mikedilger/chorus"
edition = "2021"

[dependencies]
base64 = "0.22"
bitcoin_hashes = "0.19"
dashmap = "6"
env_logger = "0.11"
futures = "0.3"
hex = "0.4"
http = "1.3"
http-body-util = "0.1"
hyper = { version = "1.6", features = [ "http1", "server" ] }
hyper-tungstenite = "0.17"
hyper-util = "0.1"
lazy_static = "1.5"
log = "0.4"
mime-sniffer = "0.1"
mime2ext = "0.1"
negentropy = "0.5"
pocket-types = { git = "https://github.com/mikedilger/pocket", ref = "43d35015f7caf1db48eb846a1d6916a5716048da" }
pocket-db = { git = "https://github.com/mikedilger/pocket", ref = "43d35015f7caf1db48eb846a1d6916a5716048da" }
parking_lot = "0.12"
rustls-pki-types = "1.11"
rustls-pemfile = "2.2"
secp256k1 = { version = "0.31", features = [ "hashes", "global-context" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
speedy = "0.8"
textnonce = "1"
tokio = { version = "1", features = [ "full" ] }
tokio-rustls = "0.26"
tokio-util = { version = "0.7", features = [ "io" ] }
tokio-stream = "0.1"
toml = "0.8"
url = "2.5"

[dev-dependencies]
tempfile = "3"