[package]
name = "chorus"
version = "1.1.1"
description = "A personal relay for nostr"
authors = ["Mike Dilger <mike@mikedilger.com>"]
license = "MIT"
repository = "https://github.com/mikedilger/chorus"
edition = "2021"

[dependencies]
chorus-lib = { path = "../chorus-lib" }
dashmap = "5.5"
env_logger = "0.10"
futures = "0.3"
hyper = { version = "0.14", features = [ "http1", "server", "runtime", "stream" ] }
hyper-tungstenite = "0.11"
lazy_static = "1.4"
log = "0.4"
rustls-pemfile = "1.0"
serde = { version = "1.0", features = ["derive"] }
textnonce = "1"
tokio = { version = "1", features = [ "full" ] }
tokio-rustls = "0.24"
toml = "0.8"
url = "2.5"

[dev-dependencies]
tempfile = "3"