[package]
name = "chorus-lib"
version = "1.0.6"
description = "A personal relay for nostr"
authors = ["Mike Dilger <mike@mikedilger.com>"]
license = "MIT"
repository = "https://github.com/mikedilger/chorus"
edition = "2021"

[dependencies]
dashmap = "5.5"
env_logger = "0.10"
futures = "0.3"
heed = { git = "https://github.com/meilisearch/heed", rev = "64fd6fec293c0dee94855b8267557ce03e7ce5d8" }
hyper = { version = "0.14", features = [ "http1", "server", "runtime", "stream" ] }
hyper-tungstenite = "0.11"
lazy_static = "1.4"
log = "0.4"
mmap-append = { git = "https://github.com/mikedilger/mmap-append", rev = "0d20e193e7f13a442865a4a40a5da9a120e87411" }
rustls-pemfile = "1.0"
secp256k1 = { version = "0.28", features = [ "hashes", "global-context", "rand-std" ] }
serde = { version = "1.0", features = ["derive"] }
textnonce = "1"
tokio = { version = "1", features = [ "full" ] }
tokio-rustls = "0.24"
toml = "0.8"
url = "2.5"

[dev-dependencies]
tempfile = "3"