[package]
name = "chorus-lib"
version = "1.3.0"
description = "A personal relay for nostr"
authors = ["Mike Dilger <mike@mikedilger.com>"]
license = "MIT"
repository = "https://github.com/mikedilger/chorus"
edition = "2021"

[dependencies]
base64 = "0.22"
futures = "0.3"
heed = { git = "https://github.com/meilisearch/heed", rev = "64fd6fec293c0dee94855b8267557ce03e7ce5d8" }
hyper = { version = "0.14", features = [ "http1", "server", "runtime", "stream" ] }
hyper-tungstenite = "0.11"
log = "0.4"
mmap-append = "0.2"
secp256k1 = { version = "0.28", features = [ "hashes", "global-context", "rand-std" ] }
serde = { version = "1.0", features = ["derive"] }
speedy = "0.8"
tokio = { version = "1", features = [ "full" ] }
tokio-rustls = "0.24"
toml = "0.8"
url = "2.5"

[dev-dependencies]
tempfile = "3"